# fenestrate

./: .gitignore  pyproject.toml
.circleci/: config.yml
doc/source/: conf.py  index.rst  introduction.rst
fenestrate/: fenestrate.py  selectors.py
specs/: fenestrate.tla  nextwindow.tla
tests/: test_fenestrate.py  test_time_windows.py
