[tool.poetry]
name = "fenestrate"
version = "0.1.0"
description = ""
authors = ["Vic Putz <vbputz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arrow = "^1.1.0"
attrs = "^21.2.0"
icontract = "^2.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = "^6.14.0"
python-lsp-server = {extras = ["rope", "pyflakes", "mccabe", "pycodestyle"], version = "^1.0.1"}
python-lsp-black = "^1.0.0"
pytz = "^2021.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
