[tool.poetry]
name = "fenestrate"
version = "0.2.0"
description = ""
authors = ["Vic Putz <vbputz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arrow = "^1.1.0"
attrs = "^21.2.0"
icontract = "^2.5.2"
toolz = "^0.11.1"
intervaltree = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
hypothesis = "^6.14.0"
python-lsp-server = {extras = ["rope", "pyflakes", "mccabe", "pycodestyle"], version = "^1.0.1"}
python-lsp-black = "^1.0.0"
pytz = "^2021.1"
mypy-ls = "^0.4.1"
pyls-isort = "^0.2.2"
invoke = "^1.5.0"
watchdog = {extras = ["watchmedo"], version = "^2.1.2"}
pytest-xdist = {extras = ["psutil"], version = "^2.3.0"}
Sphinx = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
  "pytz",
  "intervaltree",
]
ignore_missing_imports = true